--- a/src/app/views/home/live-list/live-list.component.html
+++ b/src/app/views/home/live-list/live-list.component.html
@@ -1,1 +1,4 @@
-<p>live-list works!</p>
+<mat-tab-group mat-align-tabs="start" style="padding: 20px 2% 0" >
+    <mat-tab label="Next">Content 1</mat-tab>
+    <mat-tab label="Realized">Content 2</mat-tab>
+</mat-tab-group>
